syntax = "proto3";  //protobuf3协议
package inf;


//服务
service Data {
rpc GetUser(UserRq) returns (UserRp);
}


//请求
message UserRq {
int32 id = 1;
}

//响应
message UserRp {
string name = 1;
}
